<resources>
    <string name="app_name">ActivityScreens</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_chat">Chat</string>
    <string name="label_meeting">Meeting</string>
    <string name="label_call">Call</string>
    <string name="label_fax">Fax</string>
    <string name="label_profile">Profile</string>
    <string name="tv_duration">30m 45s</string>
    <string name="tv_date">10 Mar, 8:25 am</string>
    <string name="tv_heading_transaction">Transactions</string>
    <string name="chip_all">All</string>
    <string name="chip_expense">Expense</string>
    <string name="chip_income">Income</string>
    <string name="hint_search_here">Search here</string>
    <string name="label_caller_profile">Caller Profile</string>
    <string name="label_support">Support</string>
    <string name="label_welcome_intro">Welcome to OneCloud Sign in to get started</string>
    <string name="label_intro_feature">Anytime, anywhere video conferencing</string>
    <string name="label_email">Email</string>
    <string name="label_hint_email">Enter Your Email/Username</string>
    <string name="label_password">Password</string>
    <string name="label_hint_password">Enter Password</string>
    <string name="label_forgot_pass">Forgot Password?</string>
    <string name="label_login_btn">Log in</string>
    <string name="label_login_option">Or continue with</string>
    <string name="label_dm">Direct Message</string>
    <string name="label_channel">Channels</string>
    <string name="label_fax_preview">All Fax related Information appear here</string>
    <string name="label_meeting_preview">All Upcoming meetings will appear here</string>
    <string name="label_user_name_preview">Jenny Doe (1009)</string>
    <string name="label_user_email_preview">jenny.d@gmail.com</string>
    <string name="item_name_preview">Robert Fox</string>
    <string name="label_heading_meeting">Meeting</string>
    <string name="label_logout">Log out</string>
    <string name="label_status">Status</string>
    <string name="label_available">Available</string>
    <string name="label_personal_info">Personal info</string>
    <string name="label_no_data">No Data Found</string>
    <string name="channel_description">Shubham is calling you</string>
    <string name="channel_name">Call</string>
</resources>